--- a/database-compose.yml
+++ b/database-compose.yml
@@ -8,7 +8,9 @@ services:
       POSTGRES_PASSWORD: 123456
     ports:
       - "5432:5432"
-    
+    volumes:
+      - pgadmin:/var/lib/postgresql/data    
+
   pgadmin-container:
     image: dpage/pgadmin4
     restart: always
@@ -17,9 +19,18 @@ services:
       PGADMIN_DEFAULT_PASSWORD: 123456
     ports:
       - "5050:80"
+    volumes:
+      - postgres:/var/lib/pgadmin
   
   redis-container: 
     image: redis
     restart: always
     ports:
       - "6379:6379"
+    volumes:
+      - redis:/data
+  
+volumes:
+  postgres:
+  pgadmin:
+  redis:
