--- a/database-compose.yml
+++ b/database-compose.yml
@@ -4,7 +4,7 @@ services:
     image: postgres
     restart: always
     environment: 
-      POSTGRES_USER: hieu
+      POSTGRES_USER: root
       POSTGRES_PASSWORD: 123456
     ports:
       - "5432:5432"
