--- a/package.json
+++ b/package.json
@@ -1,28 +1,42 @@
 {
-    "name": "ecommerce-nmpm-backend",
-    "version": "1.0.0",
-    "description": "This is backend for e-commerce project in Introduce to Software Engineer",
-    "main": "server/server.js",
-    "scripts": {
-        "start": "gulp run"
-    },
-    "authors": [
-        {
-            "name": "Nguyen Hieu",
-            "email": "hieucckha@gmail.com"
-        }
-    ],
-    "license": "MIT",
-    "dependencies": {
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
-        "gulp": "^4.0.2",
-        "gulp-mocha": "^8.0.0",
-        "gulp-nodemon": "^2.5.0",
-        "gulp-todo": "^7.1.1",
-        "gulp-util": "^3.0.8",
-        "mocha": "^10.1.0",
-        "morgan": "^1.10.0",
-        "nodemon": "^2.0.20"
+  "name": "ecommerce-nmpm-backend",
+  "version": "1.0.0",
+  "description": "This is backend for e-commerce project in Introduce to Software Engineer",
+  "main": "server/server.js",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Nguyen Hieu",
+      "email": "hieucckha@gmail.com"
     }
+  ],
+  "_moduleAliases": {
+    "@src": "./src"
+  },
+  "type": "commonjs",
+  "scripts": {
+    "dev": "nodemon --delay 2.5 --watch src src/server.js",
+    "lint": "eslint --fix src"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mocha": "^10.1.0",
+    "module-alias": "^2.2.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.8.0",
+    "redis": "^4.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.7.1"
+  }
 }
