--- a/database-compose.yml
+++ b/database-compose.yml
@@ -1,35 +1,35 @@
-version: "3.9"
-services: 
+version: '3.9'
+services:
   postgres-container:
     image: postgres
     restart: always
-    environment: 
+    environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: 123456
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
-      - pgadmin:/var/lib/postgresql/data    
+      - pgadmin:/var/lib/postgresql/data
 
   pgadmin-container:
     image: dpage/pgadmin4
     restart: always
-    environment: 
+    environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: 123456
     ports:
-      - "5050:80"
+      - '5050:80'
     volumes:
       - postgres:/var/lib/pgadmin
-  
-  redis-container: 
+
+  redis-container:
     image: redis
     restart: always
     ports:
-      - "6379:6379"
+      - '6379:6379'
     volumes:
       - redis:/data
-  
+
 volumes:
   postgres:
   pgadmin:
