--- a/package.json
+++ b/package.json
@@ -15,17 +15,25 @@
   },
   "type": "commonjs",
   "scripts": {
-    "dev": "nodemon --delay 2.5 --watch src src/server.js",
+    "dev": "nodemon --delay 3 --watch src src/server.js",
     "lint": "eslint --fix src"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
+    "connect-redis": "^6.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "http-errors": "^2.0.0",
+    "ioredis": "^5.2.4",
     "mocha": "^10.1.0",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.8.0",
-    "redis": "^4.4.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.26.0",
