--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.8.0",
+    "pg-promise": "^10.15.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
