--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   },
   "type": "commonjs",
   "scripts": {
-    "dev": "nodemon --delay 3 --watch src src/server.js",
+    "dev": "nodemon  --watch src src/server.js",
     "lint": "eslint --fix src"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "connect-redis": "^6.1.3",
